# MyEngine

./: CMakeLists.txt  README.md
config/: Config.cmake.in
include/MyEngine/: Engine.h  SceneMngr.h
src/EMPTY/: CMakeLists.txt  EMPTY.cpp
src/core/: CMakeLists.txt  Engine.cpp  SceneMngr.cpp
src/test/00_basic/: main.cpp
src/test/01_myscene/: CMakeLists.txt  main.cpp
src/test/02_CornellBox/: main.cpp
