CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MyEngine VERSION 0.0.7 LANGUAGES CXX)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(FETCHCONTENT)

MESSAGE(STATUS "Looking for: MyCMake 0.5.0")
FIND_PACKAGE(MyCMake 0.5.0 QUIET)
IF (NOT MyCMake_FOUND)
    SET(ADDRESS "https://github.com/shimakaze09/MyCMake.git")
    MESSAGE(STATUS "MyCMake 0.5.0 not found\n")
    MESSAGE(STATUS "Fetching from ${ADDRESS} with tag 0.5.0")
    FETCHCONTENT_DECLARE(
            MyCMake
            GIT_REPOSITORY ${ADDRESS}
            GIT_TAG "0.5.0"
    )
    FETCHCONTENT_MAKEAVAILABLE(MyCMake)
    MESSAGE(STATUS "MyCMake 0.5.0 built")
ENDIF ()

DOWNLOAD_ZIP(
        https://cdn.jsdelivr.net/gh/shimakaze09/MyData@main/MyEngine/imgui.zip
        imgui.zip
        SHA256 9E134D8DBE8FD94A292DDD313A80BA77C113CD4756B4429777169C147401E200
)

FIND_PACKAGE(glfw3 REQUIRED)

ADD_DEP(MyRTR 0.0.10)

ADD_SUB_DIRS_REC(src)

EXPORT_TARGETS(DIRECTORIES "include")